--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -1,7 +1,15 @@
 \chapter{Results}
+\section{Single-Voxel Simulation}
+The results 
+
+\section{Single-Voxel Analysis}
+This section discusses the results when the particle filter was
+applied on a single voxel. The parameters are the same as
+those used later for entire image analysis; however, the results
+are more in-depth. 
+
 \section{Weighting Function Comparison}
 \label{sec:Results Weights}
-
 
 \section{Single Time-Series Simulation}
 
