some mild additions to methods and results

--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -116,6 +116,7 @@ Typically a step size of .001 was used, after finding that even .01 can
 at times lead to the state equations careening out of control.
 
 \section{Resampling}
+\label{sec:Resampling}
 The algorithm for resampling is described in \autoref{sec:Particle Filter Resampling}.
 The primary design decision for resampling is the regularizing
 kernel. As mentioned previously, the Gaussian kernel is extremely convenient,
