--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -340,7 +340,9 @@ in this case, whereas the Unscented Kalman Filter still does. In fact
 the one performed in this work. 
 
 \begin{figure}
-\caption{Examples of update distributions, using an Kalman Filter, \cite{Thrun2005}}
+\includegraphics[width=16cm]{images/kalman}
+%\includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_point1sec_3sigma.pdf}
+\caption{Example updates of a distribution using Kalman Filter, \cite{Thrun2005}}
 \label{fig:EKFWorking}
 \end{figure}
 
