--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -447,6 +447,12 @@ distributions as well, given the unpredictable nature of the noise present in FM
 The choice of this function will be discussed further in \autoref{sec:Methods
 Weighting Function}.
 
+\begin{figure}
+\includegraphics[width=16cm]{images/particle_filter}
+\caption{Particle Filter progression, note that the initial support is flat; the particles
+are equally spaced between -10 and 10}
+\end{figure}
+
 \section{Simple, Nonlinear Example}
 A typical half wave rectifier takes a AC voltage circuit and removes
 one half (say the negative half) of the signal. The resulting waveform
